--- a/.github/workflows/github-to-gitlab.yml
+++ b/.github/workflows/github-to-gitlab.yml
@@ -18,6 +18,6 @@ jobs:
     # https://github.com/wangchucheng/git-repo-sync.git
     - uses: wangchucheng/git-repo-sync@v0.1.0
       with: 
-        target-url: ${{ gitlab.TARGET_URL }} 
-        target-username: ${{ gitlab.GITLAB_USERNAME }}
-        target-token: ${{ gitlab.ACCESS_TOKEN }}
+        target-url: ${{ secrets.TARGET_URL }} 
+        target-username: ${{ secrets.GITLAB_USERNAME }}
+        target-token: ${{ secrets.ACCESS_TOKEN }}
