--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ Django = "4.0.2"
 djangorestframework = "3.13.1"
 gunicorn = "20.1.0"
 python = "^3.8"
+Pillow = "^9.0.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
