--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ djangorestframework = "3.13.1"
 gunicorn = "20.1.0"
 python = "^3.8"
 Pillow = "^9.0.1"
+nanoid = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
