--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ Django = "4.0.2"
 djangorestframework = "3.13.1"
 gunicorn = "20.1.0"
 python = "^3.8"
-Pillow = "^9.0.1"
+Pillow = "^9.0.1" 
+drf-yasg = "^1.20.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
