--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.8"
 Pillow = "^9.0.1"
 nanoid = "^2.0.0"
 drf-yasg = "^1.20.0"
+django-cors-headers = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
