--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "creme_ai"]
+[submodule "creme-ai"]
 	path = creme_ai
 	url = https://github.com/CreamDeLaCream/creme-ai.git
 	branch = model-serving
