--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "3.8"
 Django = "^4.0.2"
 djangorestframework = "^3.13.1"
 cmake = "^3.22.2"
-dlib = "^19.23.0"
+dlib = "19.8.2"
 tensorflow = "^2.8.0"
 imutils = "^0.5.4"
 pandas = "^1.4.1"
